# clerk

./: .gitignore  .last_out  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  apm.lock.yaml  apm.yml  catalog-sources.toml  catalog.json  cog.toml  justfile  pyproject.toml  release-please-config.json
.agents/plugins/: marketplace.json
.claude/: apm-hooks.json
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: 15-toolchain-defaults.md
.codex/: hooks.json
.github/workflows/: pack.yml  release-please.yml  release.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md  roadmap.md
.specify/workflows/: workflow-registry.json
_meta/module-template/: copier.yml
docs/architecture/: end-state-components.md
docs/decisions/: 0001-copier-as-engine.md  0002-catalog-and-answer-model.md  0003-selector-template-and-runtime-injection.md  0004-rendering-and-extensions.md  0005-global-per-module-defaults.md  0006-release-and-split-model.md  0007-native-command-scaffolding.md  0008-pypi-packaging-repositioning.md
docs/runbooks/: fanout-release.md
examples/bailiff-template-example/: copier.yml
examples/clerk-mod-base/: copier.yml
examples/clerk-template-example/: copier.yml
scripts/: _meta_register.py  bailiff.py  check_modules.py  clerk.py  fanout_module.sh  generate_catalog.py  try-bailiff.sh  try-clerk.sh
skills/bailiff/: SKILL.md
skills/clerk/: SKILL.md
specs/001-bailiff-vertical-slice/: plan.md  quickstart.md  spec.md  tasks.md
specs/001-clerk-vertical-slice/: plan.md  quickstart.md  spec.md  tasks.md
specs/002-catalog/: plan.md  spec.md  tasks.md
specs/003-multi-template/: plan.md  spec.md  tasks.md
specs/004-defaults/: plan.md  spec.md  tasks.md
specs/005-secrets/: plan.md  spec.md  tasks.md
specs/006-upgrade/: plan.md  spec.md  tasks.md
specs/007-agentic-module/: plan.md  spec.md  tasks.md
specs/008-packaging/: plan.md  spec.md  tasks.md
specs/008b-fanout-authoring/: plan.md  spec.md  tasks.md
specs/009-project-setup-port/: plan.md  spec.md  tasks.md
specs/010-delivery-reshape/: plan.md  spec.md  tasks.md
specs/011-deopinionated-module-family/: agent-assignments.yml  data-model.md  decisions-ledger.md  plan.md  quickstart.md  research.md  security-review-tasks.md  spec.md  tasks.md
specs/012-module-batch-2/: decisions-ledger.md  plan.md  spec.md  tasks.md
specs/013-engine-capabilities-pypi/: decisions-ledger.md  plan.md  spec.md  tasks.md
specs/014-namespaced-question-keys/: agent-assignments.yml  data-model.md  decisions-ledger.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-agent-projected-capabilities/: plan.md  spec.md  tasks.md
specs/016-tool-preflight-gate/: plan.md  spec.md  tasks.md
src/bailiff/: __init__.py  __main__.py  _preflight.py  agent.py  catalog.py  cli.py  defaults.py  discovery.py  errors.py  ordering.py  runner.py  trust.py
src/clerk/: __init__.py  _preflight.py  catalog.py  cli.py  defaults.py  discovery.py  errors.py  ordering.py  runner.py  trust.py
templates/bailiff-mod-agentic/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-api/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-apm/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-base/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-cdk/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-ci-github/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-ci-gitlab/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-cloudformation/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-cocogitto/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-dep-updates/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-devcontainer/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-editorconfig/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-github-repo/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-gitlab-repo/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-go/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-justfile/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-lefthook/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-mkdocs/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-moon/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-package-add/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-precommit/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-python/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-quality/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-readme/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-rust/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-stack-adr/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-terraform/: CHANGELOG.md  README.md  copier.yml
templates/bailiff-mod-ts/: CHANGELOG.md  README.md  copier.yml
templates/clerk-mod-agentic/: CHANGELOG.md  README.md  copier.yml
templates/clerk-mod-apm/: CHANGELOG.md  README.md  copier.yml
templates/clerk-mod-base/: CHANGELOG.md  README.md  copier.yml
templates/clerk-mod-cdk/: CHANGELOG.md  README.md  copier.yml
templates/clerk-mod-ci-github/: CHANGELOG.md  README.md  copier.yml
templates/clerk-mod-ci-gitlab/: CHANGELOG.md  README.md  copier.yml
templates/clerk-mod-cloudformation/: CHANGELOG.md  README.md  copier.yml
templates/clerk-mod-github-repo/: CHANGELOG.md  README.md  copier.yml
templates/clerk-mod-go/: CHANGELOG.md  README.md  copier.yml
templates/clerk-mod-justfile/: CHANGELOG.md  README.md  copier.yml
tests/: conftest.py  test_catalog_cache.py  test_catalog_capabilities.py  test_catalog_precedence.py  test_check_modules_capabilities.py  test_cli_extraction.py  test_discovery_capabilities.py  test_errors.py  test_runner_capability_warning.py  test_runner_collision.py  test_smoke.py  test_version.py
(+319 files in other folders)
