[project]
name = "copier-clerk"
version = "0.1.0"
description = "An agentic conductor for copier — the clerk fills in the paperwork; copier makes the copies."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Sjors Robroek" }]
keywords = ["copier", "scaffolding", "agentic", "templates", "claude", "apm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  # copier is the deterministic render + reproduce engine. Pinned for
  # byte-stable reproduce (see docs/decisions/0002); clerk drives it via its
  # Python API / uvx and never runs template _tasks (no --trust).
  "copier>=9.16,<10",
]

[project.urls]
Homepage = "https://github.com/srobroek/clerk"
Repository = "https://github.com/srobroek/clerk"

[project.scripts]
clerk = "clerk.cli:main"

[dependency-groups]
dev = [
  "pytest>=8",
  "mypy>=1.11",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clerk"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/clerk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
