[project]
name = "bailiff"
version = "0.1.0"
description = "A bundled copier conductor skill — the bailiff fills in the paperwork; copier makes the copies."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Sjors Robroek" }]
keywords = ["copier", "scaffolding", "agentic", "templates", "claude", "apm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  # copier is the deterministic render + reproduce engine. Pinned <10 for
  # byte-stable reproduce and a stable public surface (see docs/decisions/0001,
  # 0002). bailiff drives it via its public API / CLI; a template's _tasks run at
  # init AND reproduce, gated by the user's settings.yml trust (never blanket
  # unsafe=True) — see the constitution, Principles III & V.
  "copier>=9.16,<10",
  # Static discovery only: PEP 440 tag filtering + copier.yml parsing. No
  # pydantic seam and no deprecated-surface adapter in this slice.
  "packaging>=26.2",
  "pyyaml>=6.0.3",
  "tomli-w>=1.2.0",
]

[project.scripts]
# Sanctioned by constitution v3.0.0 / ADR-0008 (spec 013 FR-001): bailiff is the
# tool on PyPI; `uvx bailiff` / `uv run bailiff` are the invocation paths.
bailiff = "bailiff.cli:main"

[project.urls]
Homepage = "https://github.com/bailiff-io/bailiff"
Repository = "https://github.com/bailiff-io/bailiff"

[dependency-groups]
dev = [
  "pytest>=8",
  "mypy>=1.11",
  "ruff>=0.6",
  "types-pyyaml>=6.0.12.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bailiff"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "scripts"]
# Vendored tooling (speckit hooks) and speckit test fixtures are not project
# source; lint would flag code we do not author or maintain.
extend-exclude = [".claude", ".codex", ".specify"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
# Tests use pathlib.Path and fixture types at runtime (pytest evaluates
# annotations and constructs fixtures), so the type-checking-import rules are
# noise here — the imports are genuinely needed outside TYPE_CHECKING.
"tests/**" = ["TC001", "TC002", "TC003"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/bailiff"]
mypy_path = ["src"]
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# The suite is hermetic/offline by default. The single live-source smoke test is
# marked `network` and deselected here; run it explicitly with `-m network`.
addopts = "-m 'not network'"
markers = [
  "network: test requires network access (live-source smoke test); deselected by default",
]
